// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleSearchToolbar /> should render when [canCreate=false] 1`] = `
<div>
  <Toolbar>
    <FormGroup
      bsClass="form-group"
    >
      <InputGroup
        bsClass="input-group"
      >
        <InputGroupAddon
          bsClass="input-group-addon"
        >
          <Icon
            faStyle="fas"
            fixedWidth={false}
            name="search fa-fw"
            pullRight={false}
          />
        </InputGroupAddon>
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="Sample name"
          type="text"
          value=""
        />
      </InputGroup>
    </FormGroup>
  </Toolbar>
  <Box>
    <Connect(AlgorithmFilter) />
  </Box>
</div>
`;

exports[`<SampleSearchToolbar /> should render when [canCreate=true] 1`] = `
<div>
  <Toolbar>
    <FormGroup
      bsClass="form-group"
    >
      <InputGroup
        bsClass="input-group"
      >
        <InputGroupAddon
          bsClass="input-group-addon"
        >
          <Icon
            faStyle="fas"
            fixedWidth={false}
            name="search fa-fw"
            pullRight={false}
          />
        </InputGroupAddon>
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="Sample name"
          type="text"
          value=""
        />
      </InputGroup>
    </FormGroup>
    <LinkButton
      tip="Create"
      to={
        Object {
          "state": Object {
            "createSample": true,
          },
        }
      }
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="plus-square fa-fw"
        pullRight={false}
      />
    </LinkButton>
  </Toolbar>
  <Box>
    <Connect(AlgorithmFilter) />
  </Box>
</div>
`;
